--- a/index.html
+++ b/index.html
@@ -4,14 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ONLINE MEALS</title>
-    <link rel="stylesheet" href="/css/stylesheet.css">
+    <!-- <link rel="stylesheet" href="/css/stylesheet.css"> -->
     <link rel="stylesheet" media="screen and (max-width: 1170px)" href="/css/phone.css">
+    <link rel="stylesheet" href="css/stylesheet.css">
+    <!-- <link rel="stylesheet" href="css/phone.css"> -->
+
+
 
 </head>
 <body>
     <nav id="navbar">
         <div id="logo">
-            <img src="/image/food-2085075_1280.png" alt="">
+            <img src="./image/food-2085075_1280.png" alt="">
         </div>
         <ul>
             <li class="list">
