--- a/index.html
+++ b/index.html
@@ -4,18 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ONLINE MEALS</title>
-    <!-- <link rel="stylesheet" href="/css/stylesheet.css"> -->
-    <link rel="stylesheet" media="screen and (max-width: 1170px)" href="/css/phone.css">
-    <link rel="stylesheet" href="css/stylesheet.css">
-    <!-- <link rel="stylesheet" href="css/phone.css"> -->
-
+    <link rel="stylesheet" href="../Fully Responsive Website/css/stylesheet.css">
+    <link rel="stylesheet" media="screen and (max-width: 1170px)" href="../Fully Responsive Website/css/phone.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital@1&display=swap" rel="stylesheet">
 
 
 </head>
 <body>
     <nav id="navbar">
         <div id="logo">
-            <img src="./image/food-2085075_1280.png" alt="">
+            <img src="../Fully Responsive Website/image/food-2085075_1280.png" alt="">
         </div>
         <ul>
             <li class="list">
@@ -37,15 +35,15 @@
             Welcome to Online Meal
         </h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores error nostrum fugit! Facere eveniet nesciunt.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla magni.
+        <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla magni. -->
         </p>
         <button class="btn">Order Now</button>
     </section>
     <section id="services-container">
-        <h1 class="h-primary center">Our Services</h1>
+        <h1 class="h-primary center" id="ser">Our Services</h1>
         <div id="services">
             <div class="box">
-                <img src="image/26205.jpg" alt="">
+                <img src="../Fully Responsive Website/chef-2012854_1280.png" alt="">
                 <h2 class="h-secondary center">Food Catering</h2>
                 <p class="center">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem, culpa suscipit error
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et qui, repudiandae similique nam, recusandae quidem ab asperiores ex, aut fugit labore veritatis facere?
@@ -53,7 +51,7 @@
                     voluptas beatae facilis labore, omnis sint quae eum.</p>
             </div>
             <div class="box">
-                <img src="image/salmon-518032_1920.jpg" alt="">
+                <img src="../Fully Responsive Website/ramen-3950790_1280.png" alt="">
                 <h2 class="h-secondary center">Bulk Ordering</h2>
                 <p class="center">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem, culpa suscipit error
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde laudantium a incidunt animi ad, ab dignissimos vero? Unde numquam odit repudiandae perferendis nisi.
@@ -107,6 +105,9 @@
                     <div class="form-group">
                         <label for="message">Message: </label>
                         <textarea name="message" id="message" cols="30" rows="10"></textarea>
+                    </div>
+                    <div>
+                        <button class="btnx">submit</button>
                     </div>
                 </form>
             </div>
