--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ONLINE MEALS</title>
-    <link rel="stylesheet" href="../Fully Responsive Website/css/stylesheet.css">
-    <link rel="stylesheet" media="screen and (max-width: 1170px)" href="../Fully Responsive Website/css/phone.css">
+    <link rel="stylesheet" href="../responsive_web/css/stylesheet.css">
+    <link rel="stylesheet" media="screen and (max-width: 1170px)" href="../responsive_web/css/phone.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital@1&display=swap" rel="stylesheet">
 
 
@@ -13,7 +13,7 @@
 <body>
     <nav id="navbar">
         <div id="logo">
-            <img src="../Fully Responsive Website/image/food-2085075_1280.png" alt="">
+            <img src="../responsive_web/image/food-2085075_1280.png" alt="">
         </div>
         <ul>
             <li class="list">
@@ -43,7 +43,7 @@
         <h1 class="h-primary center" id="ser">Our Services</h1>
         <div id="services">
             <div class="box">
-                <img src="../Fully Responsive Website/chef-2012854_1280.png" alt="">
+                <img src="../responsive_web/chef-2012854_1280.png" alt="">
                 <h2 class="h-secondary center">Food Catering</h2>
                 <p class="center">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem, culpa suscipit error
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et qui, repudiandae similique nam, recusandae quidem ab asperiores ex, aut fugit labore veritatis facere?
@@ -51,7 +51,7 @@
                     voluptas beatae facilis labore, omnis sint quae eum.</p>
             </div>
             <div class="box">
-                <img src="../Fully Responsive Website/ramen-3950790_1280.png" alt="">
+                <img src="../responsive_web/ramen-3950790_1280.png" alt="">
                 <h2 class="h-secondary center">Bulk Ordering</h2>
                 <p class="center">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem, culpa suscipit error
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde laudantium a incidunt animi ad, ab dignissimos vero? Unde numquam odit repudiandae perferendis nisi.
@@ -60,7 +60,7 @@
                     voluptas beatae facilis labore, omnis sint quae eum.</p>
             </div>
             <div class="box">
-                <img src="image/kisspng-fast-food-delivery-online-food-ordering-fried-chic-5af99aea8ccb65.2444905915263075625767.png" alt="">
+                <img src="../responsive_web/image/kisspng-fast-food-delivery-online-food-ordering-fried-chic-5af99aea8ccb65.2444905915263075625767.png" alt="">
                 <h2 class="h-secondary center">Food Ordering</h2>
                 <p class="center">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem, culpa suscipit error
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus provident fugiat aliquam minima at explicabo. Earum eveniet quaerat, sunt molestias nesciunt quas! Quis.
